[package]
name = "hangman"
version = "1.0.0"
authors = ["Timmy Jose <zoltan.jose@gmail.com>"]
description = "A simple implementation of the classic hangman game."
homepage = "https://github.com/timmyjose/hangman"
keywords = ["hangman", "console", "game"]
license = "MIT"
edition = "2018"

[dependencies]

rand = "0.4.2"
